--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
 .nava:hover{      
     color: blue !important;    
 }
+
+body{
+    background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
+}
